[package]
name = "oxyde"
version = "0.1.0"
edition = "2021"
authors = ["Howard Wilson <howard@watsonbox.net>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.10.1"
indicatif = "0.17.7"
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"
log = "0.4.20"
magnus = { version = "0.6.2" }
mysql = "24.0.0"
once_cell = "1.19.0"
pretty-bytes = "0.2.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { git = "https://github.com/rust-lang-nursery/rand" }

[[bench]]
name = "benchmark"
harness = false
